<resources>
    <string name="app_name">DashBoard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_app">DashBoard App</string>
    <string name="clicks">Clicks</string>
    <string name="dashboard">Dashboard</string>
    <string name="overview">Overview</string>
    <string name="view_analytics">View Analytics</string>
    <string name="view_all_links">View all Links</string>
    <string name="talk_with_us">Talk with us</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="good_morning">good morning</string>
    <string name="good_afternoon">good afternoon\n</string>
    <string name="good_evening">good evening</string>
    <string name="good_night">good night</string>


    <string-array name="months_array">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>


</resources>